objects/Customer_Success_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>Product_Families__c</fullName>
        <label>Product Families</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Deployment</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Computational Biology</fullName>
                </value>
                <value>
                    <fullName>Computational Finance</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Embedded Code Generation</fullName>
                </value>
                <value>
                    <fullName>HDL Code Generation &amp; Verification</fullName>
                </value>
                <value>
                    <fullName>Image Processing &amp; Computer Vision</fullName>
                </value>
                <value>
                    <fullName>Math, Statistics &amp; Optimization</fullName>
                </value>
                <value>
                    <fullName>MATLAB</fullName>
                </value>
                <value>
                    <fullName>Model Verification &amp; Validation</fullName>
                </value>
                <value>
                    <fullName>Parallel Computing</fullName>
                </value>
                <value>
                    <fullName>Simscape</fullName>
                </value>
                <value>
                    <fullName>Polyspace</fullName>
                </value>
                <value>
                    <fullName>Real-Time Simulation &amp; Test</fullName>
                </value>
                <value>
                    <fullName>Robotics Systems</fullName>
                </value>
                <value>
                    <fullName>Signal Processing Systems</fullName>
                </value>
                <value>
                    <fullName>Simulink and Stateflow</fullName>
                </value>
                <value>
                    <fullName>Test &amp; Measurement</fullName>
                </value>
                <value>
                    <fullName>Wireless Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Suite__c</fullName>
        <label>Product Suite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standard +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Engagement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account_Name__c</field>
                <operation>equals</operation>
                <valueField>Customer_Success_Engagement__c.Account_Name__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Success_Engagement__c</referenceTo>
        <relationshipLabel>Customer Success Engagements</relationshipLabel>
        <relationshipName>Related_Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Released_Attributes__c</fullName>
        <description>Install - Released Attributes</description>
        <label>Released Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eduPersonPrincipalName</fullName>
                </value>
                <value>
                    <fullName>eduPersonScopedAffiliation</fullName>
                </value>
                <value>
                    <fullName>mail</fullName>
                </value>
                <value>
                    <fullName>sn</fullName>
                </value>
                <value>
                    <fullName>givenName</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Risk__c</fullName>
        <label>Renewal Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Research_Group_Lab__c</fullName>
        <label>Research Group/Lab</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFT_Notes__c</fullName>
        <description>Notes on SFT Install task</description>
        <label>SFT Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFT_Status__c</fullName>
        <description>Status for SFT Install task</description>
        <label>SFT Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Waiting on Internal</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Server_Configured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Install - Server Configured?</description>
        <label>Server(s) Configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Filter_Policy__c</fullName>
        <description>Install - Special Filter Policies</description>
        <label>Special Filter Policies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <label>Stage Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E-Suspect</fullName>
                    <default>true</default>
                    <label>E-Suspect</label>
                </value>
                <value>
                    <fullName>D-Qualified suspect</fullName>
                </value>
                <value>
                    <fullName>C-Evaluation/implementation</fullName>
                </value>
                <value>
                    <fullName>Win</fullName>
                </value>
                <value>
                    <fullName>Non-win</fullName>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                </value>
                <value>
                    <fullName>Awareness 1</fullName>
                </value>
                <value>
                    <fullName>Awareness 2</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <defaultValue>IF (
OR ($RecordType.Name =  &quot;Onboarding&quot;
   , $RecordType.Name =  &quot;Re-Onboarding&quot;
   , $RecordType.Name = &quot;Annual Maintenance&quot;
), &quot;In Progress&quot; , &quot;&quot;)</defaultValue>
        <label>Sub Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting on Customer</fullName>
                </value>
                <value>
                    <fullName>Waiting on Sales</fullName>
                </value>
                <value>
                    <fullName>Waiting on Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAH_Portal_Config__c</fullName>
        <description>Install - TAH Portal Configured?</description>
        <label>TAH Portal Configured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAH_license_number__c</fullName>
        <label>TAH license number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_1_Start_Date__c</fullName>
        <label>Term 1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_2_Start_Date__c</fullName>
        <label>Term 2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_3_Start_Date__c</fullName>
        <label>Term 3 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terms_Per_Year__c</fullName>
        <label>Terms Per Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Every other year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch_Level__c</fullName>
        <label>Touch Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>University_Email_Domain__c</fullName>
        <label>University Email Domain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Story_Technical_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Story/Technical Article?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Users_Per_Semester__c</fullName>
        <label>Users Per Semester</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-25</fullName>
                </value>
                <value>
                    <fullName>25-100</fullName>
                </value>
                <value>
                    <fullName>100-250</fullName>
                </value>
                <value>
                    <fullName>250+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Success Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Stage_Name__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Age_Days__c</columns>
        <columns>Department__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Opportunity__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Active_All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Stage_Name__c</columns>
        <columns>Estimated_Close_Date__c</columns>
        <columns>Age_Days__c</columns>
        <columns>Department__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Opportunity__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Stage_Name__c</field>
            <operation>notEqual</operation>
            <value>Win,Non-win,Completed,Cancelled</value>
        </filters>
        <label>My Active All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Success Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Success Engagements</pluralLabel>
    <recordTypes>
        <fullName>Annual_Maintenance</fullName>
        <active>true</active>
        <label>Annual Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community</fullName>
        <active>true</active>
        <description>Engagements with user community</description>
        <label>Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>Curriculum</fullName>
        <active>true</active>
        <description>Engagements in Curriculum space</description>
        <label>Curriculum</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enterprise</fullName>
        <active>true</active>
        <label>Enterprise</label>
    </recordTypes>
    <recordTypes>
        <fullName>FIMTAH</fullName>
        <active>true</active>
        <label>FIMTAH</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onboarding</fullName>
        <active>true</active>
        <label>Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Other engagements</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Re_Onboarding</fullName>
        <active>true</active>
        <label>Re-Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Research</fullName>
        <active>true</active>
        <description>Engagements in Research space</description>
        <label>Research</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Annual_Maintenance_required_fields</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
     RecordType.Name = &quot;Annual Maintenance&quot;     
   , OR(
	AND(
	  OR( ISPICKVAL(Stage_Name__c , &quot;Installation&quot;)
	     ,ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;)
	     ,ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;)
	     ,ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;)
	     ,ISPICKVAL(Stage_Name__c , &quot;Completed&quot;))
	 , OR(	      
	       ISBLANK( TAH_license_number__c )
	      ,ISBLANK( TEXT(MAOTS__c ))
	      ,ISBLANK( TEXT(MDCS_Add_On__c))
	      ,ISBLANK( TEXT(Product_Suite__c))
	      )
	   ),
	AND(
	   OR( 
	       ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;)
	      ,ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;)
	      ,ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;)
	      ,ISPICKVAL(Stage_Name__c , &quot;Completed&quot;) 
	     )
	   , ISBLANK( TEXT(Identity_Management__c ))    
	  ),
	AND (
	   OR( 
	       ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;)
	      ,ISPICKVAL(Stage_Name__c , &quot;Completed&quot;) 
	     )
            ,ISBLANK( Renewal_Date__c )
          )	
   )
)</errorConditionFormula>
        <errorMessage>Fill in TAH License Number, MAOTS, MDCS Add-On, Product Suite for stages above Commitment. Fill in Identity Mgmt for stages above Installation. Fill in Renewal Date for Renewal stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Community_C_D_Win_required_fields</fullName>
        <active>false</active>
        <description>Required fields for Community type when stage is C, D or Win</description>
        <errorConditionFormula>AND(
   RecordType.DeveloperName = &quot;Community&quot; 
  ,OR(
      AND
	(
	  OR( 
		ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;) 
	      , ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
	      , ISPICKVAL(Stage_Name__c , &quot;D-Qualified suspect&quot;) 
	    )
	, OR(
		ISBLANK( Group_Name__c) 
	       ,ISBLANK( Opportunity__c )  
	     )
	),
     AND(
	 OR( 
		ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;) 
	      , ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
	    )
	      , ISBLANK( Offerings__c) 
	),
    AND (
             ISCHANGED(Stage_Name__c)
            ,ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
            ,ISBLANK( Primary_Contact__c )
        )			 
   )	
)</errorConditionFormula>
        <errorMessage>Group Name, Opportunity are required for all stages greater than E-Suspect. Offerings is required for Stage C-Evaluation/Implementation and Win. Primary Contact required for Stage Win.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_Required</fullName>
        <active>true</active>
        <description>Competitor is required when non-win reason of competitor is selected</description>
        <errorConditionFormula>AND
(
   ISPICKVAL(Non_Win_Reason__c , &quot;Competition&quot;)
 ,   ISBLANK(TEXT(Competitor__c)) 
)</errorConditionFormula>
        <errorDisplayField>Competitor__c</errorDisplayField>
        <errorMessage>Competitor value is required when the Competitor Non-Win reason is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cost_Recovery_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(Cost_Recovery__c)),
	OR(	RecordType.Name = &quot;Onboarding&quot;,
		RecordType.Name = &quot;Re-Onboarding&quot; 
	),
	OR( ISPICKVAL(Stage_Name__c , &quot;Installation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Completed&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Cost_Recovery__c</errorDisplayField>
        <errorMessage>Cost Recovery Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Level_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(Course_Level__c)),
	RecordType.DeveloperName = &quot;Curriculum&quot;,
	OR( ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Course_Level__c</errorDisplayField>
        <errorMessage>Course Level Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Course_Name__c),
	RecordType.DeveloperName = &quot;Curriculum&quot;,
	OR( ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Course_Name__c</errorDisplayField>
        <errorMessage>Course Name Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Curriculum_C_D_Win_Stage_required_fields</fullName>
        <active>false</active>
        <description>Required fields when the CSE stage is changed to D or C or Win and the record type is Curriculum</description>
        <errorConditionFormula>AND(
     RecordType.DeveloperName = &quot;Curriculum&quot;
   , OR(
	AND(
	  OR( ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;)
	     , ISPICKVAL(Stage_Name__c , &quot;D-Qualified suspect&quot;)
	     , ISPICKVAL(Stage_Name__c , &quot;Win&quot;))
	 , OR(
	       ISBLANK( TEXT(Department__c ))
	      ,ISBLANK( Opportunity__c )
	      ,ISBLANK( TEXT(Terms_Per_Year__c ))
	      ,ISBLANK( TEXT(Users_Per_Semester__c ))		
	      )
	   ),
	AND(
	   OR( 
		ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;) 
	      , ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
	     )
	   ,OR(
		ISBLANK( TEXT(Course_Level__c ))
	       ,ISBLANK( Course_Name__c )
	       ,ISBLANK( Offerings__c )
	       ,ISBLANK(  Product_Families__c )			
	      )
	  ),
	AND (
             ISCHANGED(Stage_Name__c)
            ,ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
            ,ISBLANK( Primary_Contact__c )
        )
   )
   )</errorConditionFormula>
        <errorMessage>Fill Department,Opportunity,Terms per year and Users Per Semester for stages greater than E-Suspect. Fill Course details, Offerings, Product Families for stages greater than D-Qualified Suspect. Fill Primary Contact for Win Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(Department__c )),
	OR( RecordType.DeveloperName = &quot;Research&quot;,
		RecordType.DeveloperName = &quot;Curriculum&quot;
	),
	OR( 
		ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Win&quot;),
		ISPICKVAL(Stage_Name__c , &quot;D-Qualified suspect&quot;) 			
	)  
)</errorConditionFormula>
        <errorDisplayField>Department__c</errorDisplayField>
        <errorMessage>Department Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_For_Life_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(Email_for_Life__c )),
	OR(	RecordType.Name = &quot;Onboarding&quot;,
		RecordType.Name = &quot;Re-Onboarding&quot; 
	),
	OR( ISPICKVAL(Stage_Name__c , &quot;Installation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Completed&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Email_for_Life__c</errorDisplayField>
        <errorMessage>Email for Life Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Group_Name__c),
	RecordType.DeveloperName = &quot;Community&quot;,
	OR( 
		ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Win&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;D-Qualified suspect&quot;) 
	)  
)</errorConditionFormula>
        <errorDisplayField>Group_Name__c</errorDisplayField>
        <errorMessage>Group Name Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Identity_Management_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(Identity_Management__c )),
	OR(	RecordType.Name = &quot;Annual Maintenance&quot;,
		RecordType.Name = &quot;Onboarding&quot;,
		RecordType.Name = &quot;Re-Onboarding&quot; 
	),
	OR( ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Completed&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Identity_Management__c</errorDisplayField>
        <errorMessage>Identity Management Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MAOTS_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(MAOTS__c )),
	OR(	RecordType.Name = &quot;Annual Maintenance&quot;,
		RecordType.Name = &quot;Onboarding&quot;,
		RecordType.Name = &quot;Re-Onboarding&quot; 
	),
	OR( ISPICKVAL(Stage_Name__c , &quot;Installation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Completed&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>MAOTS__c</errorDisplayField>
        <errorMessage>MAOTS Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDCS_Add_On_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(MDCS_Add_On__c)),
	OR(	RecordType.Name = &quot;Annual Maintenance&quot;,
		RecordType.Name = &quot;Onboarding&quot;,
		RecordType.Name = &quot;Re-Onboarding&quot; 
	),
	OR( ISPICKVAL(Stage_Name__c , &quot;Installation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Completed&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>MDCS_Add_On__c</errorDisplayField>
        <errorMessage>MDCS Add On Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Win_Reason_Required</fullName>
        <active>true</active>
        <description>Non win Reason is required if the stage of Non-Win is selected</description>
        <errorConditionFormula>AND(ISPICKVAL(Stage_Name__c , &quot;Non-win&quot;), ISBLANK(TEXT(Non_Win_Reason__c )))</errorConditionFormula>
        <errorDisplayField>Non_Win_Reason__c</errorDisplayField>
        <errorMessage>Non-Win Reason is required if the stage of Non-Win is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offerings_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Offerings__c),
	OR( RecordType.DeveloperName = &quot;Research&quot;,
		RecordType.DeveloperName = &quot;Other&quot;,
		RecordType.DeveloperName = &quot;Curriculum&quot;,
		RecordType.DeveloperName = &quot;Community&quot; 
	),
	OR( 
		ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Win&quot;)	
	)  
)</errorConditionFormula>
        <errorDisplayField>Offerings__c</errorDisplayField>
        <errorMessage>Offerings Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Onboarding_Reonboarding_required_fields</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
     OR(RecordType.Name = &quot;Onboarding&quot;
       ,RecordType.Name = &quot;Re-Onboarding&quot;
       )
   , OR(
	AND(
	  OR( ISPICKVAL(Stage_Name__c , &quot;Installation&quot;)
	     ,ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;)
	     ,ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;)
	     ,ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;)
	     ,ISPICKVAL(Stage_Name__c , &quot;Completed&quot;))
	 , OR(
	       ISBLANK( TEXT(Cost_Recovery__c))
	      ,ISBLANK( TAH_license_number__c )
	      ,ISBLANK( TEXT(Email_for_Life__c ))
	      ,ISBLANK( TEXT(MAOTS__c ))
	      ,ISBLANK( TEXT(MDCS_Add_On__c))
	      ,ISBLANK( TEXT(Product_Suite__c))
	      )
	   ),
	AND(
	   OR( 
	       ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;)
	      ,ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;)
	      ,ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;)
	      ,ISPICKVAL(Stage_Name__c , &quot;Completed&quot;) 
	     )
	   , ISBLANK( TEXT(Identity_Management__c ))    
	  ),
	AND (
	   OR( 
	       ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;)
	      ,ISPICKVAL(Stage_Name__c , &quot;Completed&quot;) 
	     )
            ,ISBLANK( Renewal_Date__c )
          )
	,
	AND (
	      ISPICKVAL(Stage_Name__c , &quot;Completed&quot;)
	     ,ISBLANK(Opportunity__c)
	
   )
   )
)</errorConditionFormula>
        <errorMessage>Fill in Cost recovery, TAH License Number, Email for Life, MAOTS, MDCS Add-On, Product Suite for stages above Commitment. Fill in Identity Mgmt for stages above Installation. Fill in Renewal Date for Renewal stage. Fill in Opportunity for Completed stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Opportunity__c),
	OR( RecordType.DeveloperName = &quot;Other&quot;,
		RecordType.DeveloperName = &quot;Research&quot;,
		RecordType.DeveloperName = &quot;Curriculum&quot;,
		RecordType.DeveloperName = &quot;Community&quot;,
		RecordType.Name = &quot;Onboarding&quot;,
		RecordType.Name = &quot;Re-Onboarding&quot;
	),
	OR( 
		ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Win&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;D-Qualified suspect&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Completed&quot;) 
	)  
)</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>Opportunity Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_C_D_Win_Stage_required_fields</fullName>
        <active>false</active>
        <description>Required fields for Type: Other when stages are C, D or Win</description>
        <errorConditionFormula>AND(
   RecordType.DeveloperName = &quot;Other&quot; 
  ,OR(
	AND
	(
	  OR( 
		ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;) 
	      , ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
	      , ISPICKVAL(Stage_Name__c , &quot;D-Qualified suspect&quot;) 
	    )
	 ,ISBLANK( Opportunity__c )		  	     
	),
	 AND(
	     OR( 
		   ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;) 
		 , ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
		)
		  , ISBLANK( Offerings__c) 
	    ),	
         AND (
             ISCHANGED(Stage_Name__c)
            ,ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
            ,ISBLANK( Primary_Contact__c )
        )			 
	)	
)</errorConditionFormula>
        <errorMessage>Opportunity is required for all stages greater than E-Suspect. Offerings is required for C- Evaluation/Implementation and Win stage. Primary Contact is required for Win Stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Primary_Contact__c ),
	ISCHANGED(Stage_Name__c),
	ISPICKVAL(Stage_Name__c , &quot;Win&quot;),
	OR( RecordType.DeveloperName = &quot;Other&quot; ,
		RecordType.DeveloperName = &quot;Research&quot;,
		RecordType.DeveloperName = &quot;Curriculum&quot;,
		RecordType.DeveloperName = &quot;Community&quot; 
	)
)</errorConditionFormula>
        <errorDisplayField>Primary_Contact__c</errorDisplayField>
        <errorMessage>Primary Contact Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Families_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(Product_Families__c),
	RecordType.DeveloperName = &quot;Curriculum&quot;,
	OR( ISPICKVAL(Stage_Name__c , &quot;C-Evaluation/implementation&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Win&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Product_Families__c</errorDisplayField>
        <errorMessage>Product Families Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Suite_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( TEXT(Product_Suite__c)),
	OR(	RecordType.Name = &quot;Annual Maintenance&quot;,
		RecordType.Name = &quot;Onboarding&quot;,
		RecordType.Name = &quot;Re-Onboarding&quot; 
	),
	OR( ISPICKVAL(Stage_Name__c , &quot;Installation&quot;),
		ISPICKVAL(Stage_Name__c , &quot;Awareness 1&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Awareness 2&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Completed&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Product_Suite__c</errorDisplayField>
        <errorMessage>Product Suite Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Renewal_Date__c),
	OR(	RecordType.Name = &quot;Annual Maintenance&quot;,
		RecordType.Name = &quot;Onboarding&quot;,
		RecordType.Name = &quot;Re-Onboarding&quot; 
	),
	OR( ISPICKVAL(Stage_Name__c , &quot;Renewal&quot;), 
		ISPICKVAL(Stage_Name__c , &quot;Completed&quot;)
	)
)</errorConditionFormula>
        <errorDisplayField>Renewal_Date__c</errorDisplayField>
        <errorMessage>Renewal Date Required</errorMessage>
    </validationRules>
</CustomObject>